# HoraroBackend

./: .dockerignore  .gitignore  Dockerfile  Makefile  celerybeat-schedule  conftest.py  data.json  db.sqlite3  docker-compose.local.yml  docker-compose.staging.yml  docker-compose.yml  messages.json  polygon.py  pyproject.toml  pytest.ini  readme.md  requirements.txt  setup.cfg
.github/workflows/: deploy.yml  deploy_prod.yml  deploy_staging  deploy_staging.yml  lint_staging.yml  lint_test.yml
api/: admin.py  filters.py  helpers.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_userprofile_telegram_id.py  0003_delete_blockuser.py  0004_userprofile_block.py  0005_remove_userprofile_block.py  0006_blockuser.py  0007_numberweek.py  0008_blockuser_username.py  0009_userprofile_moderator.py  0010_delete_blockuser.py  0011_delete_userprofile.py  0012_day_type_week_schedule.py  0013_delete_schedules.py  0014_alter_schedule_number_pair.py  0015_event.py  0016_event_cover_image.py  0017_schedule_end_time_schedule_start_time.py  0018_delete_numberweek.py  0019_rename_event_contentslide.py
api/models/: __init__.py  event.py  schedule.py  week.py
bots/: __init__.py  admin.py  apps.py  models.py  signals.py  tasks.py  urls.py  views.py
config/: celery.py  settings.py  urls.py  yasg.py
front/: forms.py  helper.py  urls.py  views.py
schedules/: models.py  serializers.py  views.py
staticfiles/: staticfiles.json
users/: admin.py  authentication.py  models.py  serializers.py  validators.py  views.py
website/: urls.py  views.py
(+111 files in other folders)
